test/simple/ill-typed/det_funs/eq_gen_fun.caprice
(* TEST
  include refutable;
*)

let _ : ((int -> int) --> int) -> (int -> int) -> (int -> int) -> int =
  fun f g h ->
    if f g == f h
    then 0
    else true (* ERROR: g and h are different so f g is not the same as f h *)